<?xml version="1.0"?>
<package format="2">
  <name>fetchable_client</name>
  <version>0.1.0</version>

  <description>The fetchable_client package</description>

  <maintainer email="support@fetchable.ai">Fetchable</maintainer>
  <author>Fetchable</author>

  <url type="website">http://fetchable.ai</url>
  <url type="development">https://github.com/fetchableai/fetchable_client</url>
  <url type="bugtracker">https://github.com/fetchableai/fetchable_client/issues</url>

  <license>Apache 2 License</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export></export>

</package>
